--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
 
     <string name="username_hint"><font size="22">Username</font></string>
     <string name="password_hint"><font size="22">Password</font></string>
+    <string name="title_activity_map_design">Map</string>
 
 </resources>
