--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,12 @@
     <string name="password_hint"><font size="22">Password</font></string>
     <string name="title_activity_map_design">Map</string>
 
+    <string name="password_instruction">At least 6 characters long,
+        include a capital character and a number.</string>
+    <string-array name="gender_arrays">
+        <item>Male</item>
+        <item>Female</item>
+        <item>Other</item>
+    </string-array>
+
 </resources>
